// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches BreadcrumbItem 1`] = `
.c1:not(:first-child)::before {
  display: inline-block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  color: #6c757d;
  content: "/";
}

.c1 + .c0:hover::before {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  className="c0 c1"
/>
`;

exports[`Styles matches BreadcrumbItem active 1`] = `
.c2 + .c0:hover::before {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  color: #6c757d;
}

.c1:not(:first-child)::before {
  display: inline-block;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  color: #6c757d;
  content: "/";
}

.c1 + .c0:hover::before {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  className="c0 c1"
/>
`;
